--- a/examples/index.html
+++ b/examples/index.html
@@ -14,11 +14,11 @@
 
 </head>
 <body style="width: 1920px; height: 1000px;">
-<div>
+<div style="width: 1000px; height: 300px;">
     <img src="images/pic1-min.jpg" data-max-pic="images/pic1.jpg" style="margin: 20px; float: left;"/>
     <img src="images/pic2-min.jpg" data-max-pic="images/pic2.jpg" style="margin: 20px; float: left;"/>
 </div>
-<div>
+<div style="width: 200px; height:50px; margin-left: 300px;">
     <div id="picList" data-min-pic="images/pic1-min.jpg,images/pic2-min.jpg,images/pic1-min.jpg,images/pic2-min.jpg" data-max-pic="images/pic1.jpg,images/pic2.jpg,images/pic1.jpg,images/pic2.jpg">图片组效果</div>
 </div>
 
