--- a/examples/index.html
+++ b/examples/index.html
@@ -25,11 +25,12 @@
 <script>
     //console.log('match', '9.112233'.match(/\.[0-9]+/g)[0].length);
     //console.log($.SW.NUM.addNum([13.3, 5.9, 8.4, 7.6]));
-    console.log('add', $.SW.NUM.add(13.2, 13.333333333333));
+    console.log('add', $.SW.NUM.add('13.2', '13.333333333333'));
     console.log('sub', $.SW.NUM.sub(13.333333333, 12.3333));
     console.log('mul', $.SW.NUM.mul(13.333333333, 12.3333));
     console.log('div', $.SW.NUM.div(13.333333333, 12.3333));
     console.log('div', $.SW.NUM.div(10000, 3));
+    console.log('div', $.SW.NUM.div(10000, 4));
     console.log('toDecimal', $.SW.NUM.toDecimal('17%'));
     console.log('toPercentFormat', $.SW.NUM.toPercentFormat(0.17));
 
