--- a/examples/index.html
+++ b/examples/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../dist/layercake.tools.css" />
 
     <script src="js/jquery-1.11.3.min.js"></script>
-    <script src="../dist/jquery.layercake.tools.min.js"></script>
+    <script src="http://siwoo.oss-cn-hangzhou.aliyuncs.com/jquery%2Fjquery.layercake.tools.min.js"></script>
 
 
 </head>
